# pastree

./: .gitignore  LICENSE  README.md  setup.cfg
pastree/: cli.py
tests/: test_pastree.py
