[metadata]
name = pastree
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Generate directory structures from tree-like input.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xdotcommer/pastree
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pastree = pastree.cli:main
